--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             class="circle-image">
                     </div>
                     <div class="review-text">
-                        <h3>Martin Steve</h3>
+                        <h3>Akram Azab</h3>
                         <p>English Language Instructor at Arab Academy for
                             Science, Technology and Maritime</p>
                     </div>
@@ -58,7 +58,7 @@
                         <img src="https://source.unsplash.com/random?landscape,cars" alt="Client" class="circle-image">
                     </div>
                     <div class="review-text">
-                        <h3>Martin Steve</h3>
+                        <h3>Katrina Kenny</h3>
                         <p>Sector Specialist at Ministry of Education</p>
                     </div>
                     <div class="action">
